--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
         </ul>
       </nav>
+
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu-outline"></ion-icon>   
+        <ion-icon class="icon-mobile-nav" name="close-outline"></ion-icon>   
+      </button>
     </header>
 
     <main>
@@ -43,7 +48,7 @@
             <p class="hero-description">
               The smart 365-days-per-year food subscription that will make you
               eat healthy again. Tailored to your personal tastes and
-              nutritional needs. We have delivered 250,000+ meals last year
+              nutritional needs.
             </p>
             <a href="#" class="btn btn--cta margin-right-sm"
               >Start eating now</a
@@ -437,7 +442,7 @@
 
             <div>
               <label for="select-where">Where did you hear from us?</label>
-              <select id="seclect-where"required>
+              <select id="select-where"required>
                 <option value="">Please choose one option</option>
                 <option value="friends">Friends and family</option>
                 <option value="youtube">YouTubevideos </option>
