--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                 name="close-outline"></ion-icon>
               </li>
             </ul>
-            <div class="plan-singn-up">
+            <div class="plan-sign-up">
             <a href="#" class="btn btn--cta"
             >Start eating well
           </a>
@@ -366,7 +366,7 @@
                 <span> Getaccess to latest recipess</span>
               </li>
             </ul>
-            <div class="plan-singn-up">
+            <div class="plan-sign-up">
             <a href="#" class="btn btn--cta"
             >Start eating well
           </a>
@@ -455,7 +455,7 @@
             </form>
           </div>
           <div class="cta-img-box"
-          role="img" aria-label="Womsn enjoying food"
+          role="img" aria-label="Woman enjoying food"
           >
           </div>
         </div>
