--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/queries.css" />
 
+
+
+    <script defer src="// https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+    <script defer src="js/script.js"></script>
+
     <title>Omnifood</title>
   </head>
   <body>
@@ -24,11 +29,11 @@
       </a>
       <nav class="main-nav">
         <ul class="main-nav-list">
-          <li><a class="main-nav-link" href="#">How it works</a></li>
-          <li><a class="main-nav-link" href="#">Meals</a></li>
-          <li><a class="main-nav-link" href="#">Testimonials</a></li>
-          <li><a class="main-nav-link" href="#">Pricing</a></li>
-          <li><a class="main-nav-link nav-cta" href="#">Try for free</a></li>
+          <li><a class="main-nav-link" href="#how">How it works</a></li>
+          <li><a class="main-nav-link" href="#meals">Meals</a></li>
+          <li><a class="main-nav-link" href="#testimonials">Testimonials</a></li>
+          <li><a class="main-nav-link" href="#pricing">Pricing</a></li>
+          <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
         </ul>
       </nav>
 
@@ -50,10 +55,10 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--cta margin-right-sm"
+            <a href="#cta" class="btn btn--cta margin-right-sm"
               >Start eating now</a
             >
-            <a href="#" class="btn btn--outline">Learn more &darr;</a>
+            <a href="#how" class="btn btn--outline">Learn more &darr;</a>
             <div class="delivered-meals">
               <div class="delivered-imgs">
                 <img src="img/customers/customer-1.jpg" alt="customer photo" />
@@ -91,7 +96,7 @@
         </div>
       </section>
 
-      <section class="section-how">
+      <section class="section-how" id="how">
         <div class="container">
           <span class="subheading">How it works</span>
           <h2 class="heading-secondary">Your daily dose of health in 3 simple steps</h2>
@@ -139,7 +144,7 @@
         </div>
       </section>
 
-      <section class="section-meals">
+      <section class="section-meals" id="meals" id="meals">
         <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">Omnifood AI chooses from 5,000+ recipes</h2>
@@ -226,7 +231,7 @@
         </div>
       </section>
 
-      <section class="section-testimonials">
+      <section class="section-testimonials" id="testimonials">
         <div class="testimonial-container">
         <span class="subheading">Testimonials</span>
       <h2 class="heading-secondary">Once you try it, you can't go back</h2>
@@ -305,7 +310,7 @@
         </div>
       </section>
 
-      <section class="section-pricing">
+      <section class="section-pricing" id="pricing">
         <div class="container">
           <span class="subheading">Pricing</span>
           <h2 class="heading-secondary">Eating well without breaking the bank</h2>
@@ -415,7 +420,7 @@
       </div>
       </section>
 
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container ">
           <div class="cta">
           <div class="cta-text-box">
@@ -477,7 +482,7 @@
             <li><a class="footer-link"  href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a>
             </li>
           </ul>
-          <p class="copyright">Copyright &copy;2027 by Omnifood, Inc. All rights reserved.</p>
+          <p class="copyright">Copyright &copy; <span class="year"> 2027</span> by Omnifood, Inc. All rights reserved.</p>
         </div>
 
         <div class="address-col">
