--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       </section>
 
       <section class="section-cta" id="cta">
-        <div class="container ">
+        <div class="container">
           <div class="cta">
           <div class="cta-text-box">
             <h2 class="heading-secondary">
@@ -446,24 +446,31 @@
               Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
             </p>
 
-            <form class="cta-form" action="#">
-
+            <form class="cta-form" name="sign-up" netlify>
               <div>
               <label for="full-name">Full Name</label>
-              <input id="full-name" type="text" 
-              placeholder="kay Mary" required />
+              <input id="full-name"
+              type="text" 
+              placeholder="kay Mary" 
+              name="full-name"
+              required 
+              />
             </div>
 
             <div>
               <label for="email">Email Address</label>
-              <input id="email" type="email" 
-              placeholder="kay@email.com" required />
+              <input id="email" 
+              type="email" 
+              placeholder="kay@email.com" 
+              name="email"
+              required 
+              />
             </div>
 
             <div>
               <label for="select-where">Where did you hear from us?</label>
-              <select id="select-where"required>
-                <option value="">Please choose one option</option>
+              <select id="select-where" name="select-where" required>
+                <option value="">Please choose one option:</option>
                 <option value="friends">Friends and family</option>
                 <option value="youtube">YouTubevideos </option>
                 <option value="podcast">Podcast</option>
