--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
               Healthy, tasty and hassle-free meals are waiting for you. Start eating well today. You can cancel or pause anytime. And the first meal is on us!
             </p>
 
-            <form class="cta-form" name="sign-up" netlify>
+            <form class="cta-form" name="sign-up" data-netlify="true">
               <div>
               <label for="full-name">Full Name</label>
               <input id="full-name"
